// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Animated 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <div>
        <div
          class="ui animated button"
          tabindex="0"
        >
          <div
            class="visible content"
          >
            Next
          </div>
          <div
            class="hidden content"
          >
            <i
              class="right arrow icon"
            />
          </div>
        </div>
        <div
          class="ui vertical animated button"
          tabindex="0"
        >
          <div
            class="hidden content"
          >
            Shop
          </div>
          <div
            class="visible content"
          >
            <i
              class="shop icon"
            />
          </div>
        </div>
        <div
          class="ui animated fade button"
          tabindex="0"
        >
          <div
            class="visible content"
          >
            Hello
          </div>
          <div
            class="hidden content"
          >
            <i
              class="hand peace icon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Basic Primary 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <div>
        <button
          class="ui primary basic button"
        >
          Primary
        </button>
        <button
          class="ui secondary basic button"
        >
          Secondary
        </button>
        <button
          class="ui positive basic button"
        >
          Positive
        </button>
        <button
          class="ui negative basic button"
        >
          Negative
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <button
        class="ui button"
      >
        Hello
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <button
        class="ui primary button"
      >
        Hello
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <button
        class="ui secondary button"
      >
        Hello
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards MainCard 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <div
        className="ui card"
      >
        <div
          className="image"
        >
          <img
            className="ui image Medium"
            src="https://cdn1-www.dogtime.com/assets/uploads/gallery/great-dane-dogs-and-puppies/great-dane-dogs-puppies-5.jpg"
            style={
              Object {
                "height": "200px",
                "width": "300px",
              }
            }
          />
        </div>
        <div
          className="content"
        >
          <div
            className="header"
          >
            mowgli
          </div>
          <div
            className="meta"
          >
            <span
              className="date"
            >
              Great Dane
            </span>
          </div>
          <div
            className="description"
          >
            Golly Gee I am a cute doggo
          </div>
        </div>
        <div
          className="extra content"
        >
          <a
            className="ui button primary"
            href="/dogs/1"
            onClick={[Function]}
          >
            Details
          </a>
          <a
            className="ui button danger"
            href="/dogs/edit/1"
            onClick={[Function]}
          >
            Edit
          </a>
          <a
            className="ui button"
            href="/dogs/delete/1"
            onClick={[Function]}
          >
            Delete
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header Default Header 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <div
        className="ui container"
      >
        <div
          className="ui fixed inverted menu"
        >
          <div
            className="ui container"
          >
            <a
              className="header item"
              href="/"
              onClick={[Function]}
            >
              <i
                className="fas fa-paw fa-2x"
              />
            </a>
            <a
              className="item"
              href="/dogs/new"
              onClick={[Function]}
            >
              Dogs
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header default 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <div
        className="ui container"
      >
        <div
          className="ui fixed inverted menu"
        >
          <div
            className="ui container"
          >
            <a
              className="header item"
              href="/"
              onClick={[Function]}
            >
              <i
                className="fas fa-paw fa-2x"
              />
            </a>
            <a
              className="item"
              href="/dogs/new"
              onClick={[Function]}
            >
              Dogs
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tables Default Table 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <div
        className="ui container"
      >
        <table
          className="ui celled table"
        >
          <thead>
            <tr>
              <th>
                Id
              </th>
              <th>
                Name
              </th>
              <th>
                Breed
              </th>
              <th>
                Info
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                data-label="Id"
              >
                1
              </td>
              <td
                data-label="Name"
              >
                Butty
              </td>
              <td
                data-label="Breed"
              >
                Great Dane
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
            <tr>
              <td
                data-label="Id"
              >
                2
              </td>
              <td
                data-label="Name"
              >
                Buster
              </td>
              <td
                data-label="Breed"
              >
                Yellow Lab
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
            <tr>
              <td
                data-label="Id"
              >
                3
              </td>
              <td
                data-label="Name"
              >
                Barney
              </td>
              <td
                data-label="Breed"
              >
                Bernese Mountain Dog
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
            <tr>
              <td
                data-label="Id"
              >
                4
              </td>
              <td
                data-label="Name"
              >
                Bitsy
              </td>
              <td
                data-label="Breed"
              >
                Maltipoo
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tables default 1`] = `
<div
  className="storybook-readme-story"
>
  <div
    style={
      Object {
        "margin": "32px 0",
      }
    }
  >
    <div>
      <div
        className="ui container"
      >
        <table
          className="ui celled table"
        >
          <thead>
            <tr>
              <th>
                Id
              </th>
              <th>
                Name
              </th>
              <th>
                Breed
              </th>
              <th>
                Info
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                data-label="Id"
              >
                1
              </td>
              <td
                data-label="Name"
              >
                Butty
              </td>
              <td
                data-label="Breed"
              >
                Great Dane
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
            <tr>
              <td
                data-label="Id"
              >
                2
              </td>
              <td
                data-label="Name"
              >
                Buster
              </td>
              <td
                data-label="Breed"
              >
                Yellow Lab
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
            <tr>
              <td
                data-label="Id"
              >
                3
              </td>
              <td
                data-label="Name"
              >
                Barney
              </td>
              <td
                data-label="Breed"
              >
                Bernese Mountain Dog
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
            <tr>
              <td
                data-label="Id"
              >
                4
              </td>
              <td
                data-label="Name"
              >
                Bitsy
              </td>
              <td
                data-label="Breed"
              >
                Maltipoo
              </td>
              <td
                data-label="Info"
              >
                <a
                  className="ui button"
                  href="/"
                  onClick={[Function]}
                >
                  Info
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
